syntax = "proto3";

package auth_pb;
option go_package = "auth-service/internal/grpc/pb/auth_pb";

import "google/protobuf/timestamp.proto";

message LoginRequest {
  string login = 1;
  string password = 2;
}

message RegisterRequest {
  string login = 1;
  string password = 2;
  string email = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message AuthResponse {
  string accessToken = 1;
  google.protobuf.Timestamp expiresAt = 2;
}
